--- a/Develop/style.css
+++ b/Develop/style.css
@@ -31,12 +31,13 @@ header {
 }
 
 .card {
-  background-color: hsl(0, 0%, 100%);
+  background-color: hsl(204, 72%, 79%);
   border-radius: 5px;
   border-width: 1px;
   box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px 0px;
   color: hsl(206, 17%, 28%);
   font-size: 18px;
+  font-family: Arial, Helvetica, sans-serif;
   margin: 0 auto;
   max-width: 800px;
   padding: 30px 40px;
@@ -46,7 +47,7 @@ header {
   content: " ";
   display: block;
   width: 100%;
-  background: #e7e9eb;
+  background: #4f92d4;
   height: 2px;
 }
 
@@ -62,7 +63,7 @@ header {
   content: " ";
   display: block;
   width: 100%;
-  background: #e7e9eb;
+  background: #4f92d4;
   height: 2px;
 }
 
@@ -74,13 +75,14 @@ header {
 
 .btn {
   border: none;
-  background-color: hsl(360, 91%, 36%);
+  background-color: hsl(250, 90%, 47%);
   border-radius: 25px;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 6px 0px rgba(0, 0, 0, 0.2) 0px 1px 1px
     0px;
   color: hsl(0, 0%, 100%);
   display: inline-block;
   font-size: 22px;
+  font-family: Arial, Helvetica, sans-serif;
   line-height: 22px;
   margin: 16px 16px 16px 20px;
   padding: 14px 34px;
