--- a/Develop/style.css
+++ b/Develop/style.css
@@ -95,6 +95,11 @@ button[disabled] {
   background: #c0c7cf;
 }
 
+button:hover {
+  color: white;
+  background-color: rgb(29, 5, 136);
+}
+
 .float-right {
   float: right;
 }
